# geotiff_point_sampler

./: .gitignore  LICENSE  README.md  generatePoints.py  getMntValue.py  points.csv  pyproject.toml
